packages/snap/src/cloud/build/builders/python/python-data/__tests__/examples/compilation-error/steps/api_step.py
config = {
    "type": "api" # missing comma, compilation error
    "name": "ApiTrigger",
    "description": "basic-tutorial api trigger",
    "flows": ["basic-tutorial"],
    "method": "POST",
    "path": "/",
    "emits": [],
}

async def handler(req, context):
    return {"status": 200, "body": {}}